# bear

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt  run_experiments.sh  run_paper0_evals.sh  run_paper1_evals.sh  run_paper2_evals.sh  sim_log_diploid_codominant.json  sim_log_diploid_codominant_06.json  test_lmstudio.py
bear/: __init__.py  composer.py  config.py  corpus.py  evolution.py  llm.py  logging.py  memory.py  models.py  population.py  query_refiner.py  references.py  retriever.py  twin.py  utils.py
bear/agents/: __init__.py
bear/colony/: __init__.py
bear/core/: __init__.py
bear/genetics/: __init__.py
examples/bear_parlor/: .env.example  KNOWLEDGE_BASE.md  README.md  ROADMAP.md  analyze_session.py  characters.yaml  characters.yaml.bak  ingest.py  knowledge_rag.py  panels.yaml  parlor.py  requirements.txt  run_demo_session.py  run_demo_session_v2.py
examples/customer_support/: demo.py
examples/evolutionary_ecosystem/: SPEC.md  requirements.txt  run.py  serve_llm.py
examples/pet_sim/: README.md  requirements.txt  run.py
experiments/: .gitignore  analyze_panel.py  bbh_eval.py  brainteaser_eval.py  brainteaser_puzzles.json  brainteaser_puzzles_full.json  brainteaser_wp_puzzles.json  brainteaser_wp_puzzles_full.json  download_brainteaser.py  download_medqa.py  evo_eval.py  llm_rejudge_brainteaser.py  medqa_eval.py  medqa_puzzles.json  sct_eval.py  sct_eval_v2.py  sct_repair_panel.py  sct_repair_panel_trunc.py  sct_rerun_nulls.py  sct_results_analysis.md
results/bbh_gptoss120b/: consistency_causal_judgement.json  consistency_logical_deduction_five_objects.json  panel_causal_judgement.json  single_causal_judgement.json  single_logical_deduction_five_objects.json
results/bbh_haiku/: panel_causal_judgement.json  (+2 more)
sim_logs/: sim_log_diploid_codominant_run1.json  sim_log_llm_synthesis_abundance_locked.json  sim_log_llm_synthesis_free_epoch.json  sim_log_llm_synthesis_free_epoch_run1.json  sim_log_llm_synthesis_free_epoch_run2.json  sim_log_llm_synthesis_free_regulated_pop.json
tests/: test_chromadb_backend.py  test_composer.py  test_config.py  test_corpus.py  test_evolution.py  test_integration.py  test_models.py  test_population.py  test_references.py  test_retriever.py  test_twin.py
(+616 files in other folders)
