[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bear"
version = "0.1.3"
description = "Behavioral Evolution And Retrieval (BEAR) — a framework for retrieving and composing behavioral instructions to shape LLM behavior"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "BEAR Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2",
    "instruction-tool-retrieval>=0.1.1",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
chromadb = ["chromadb>=0.4"]
pinecone = ["pinecone-client>=3.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
google = ["google-generativeai>=0.5"]
ollama = ["ollama>=0.2"]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
all = [
    "faiss-cpu>=1.7",
    "chromadb>=0.4",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "ollama>=0.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pygame>=2.5",
    "scipy>=1.10",
    "matplotlib>=3.5",
    "tiktoken>=0.4",
]
eval = [
    "scipy>=1.10",
    "matplotlib>=3.5",
    "faiss-cpu>=1.7",
    "tiktoken>=0.4",
    "instruction-tool-retrieval>=0.1.1",
]
cuda = [
    "flash-attn>=2.6",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "scipy>=1.10",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/snhwang/bear"
Repository = "https://github.com/snhwang/bear"

[tool.uv.extra-build-dependencies]
flash-attn = ["psutil", "packaging", "wheel"]

[tool.setuptools.packages.find]
include = ["bear*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
